INTWEB-941, fix the z-index issue of dropdown on popup

--- a/theme/krossover-overrides.less
+++ b/theme/krossover-overrides.less
@@ -44,7 +44,7 @@ a {
 
     box-shadow: none;
     border-radius: 0;
-    z-index: 10000;
+    z-index: 2147483647 !important;
 
     li a {
         display: block;
